Update hero section background image path
Changed the hero section's background image URL from an external link to a local path for improved loading and reliability.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <!-- Hero -->
       <section
         class="relative bg-cover bg-center bg-no-repeat min-h-[520px] sm:min-h-[620px] flex items-center"
-        style="background-image: url('https://alexnikiforov.github.io/intwocap3/img/city-hero.avif')"
+        style="background-image: url('img/city-hero.avif')"
       >
         <div class="absolute inset-0 bg-ink/75"></div>
 
