--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
               <div class="mt-2 flex flex-col gap-2 sm:flex-row">
                 <a href="#" class="btn btn-primary">Apply now</a>
-                <a href="#" class="btn btn-outline">Learn more</a>
+                <a href="/mortgage-loan" class="btn btn-outline">Learn more</a>
               </div>
             </article>
 
@@ -702,7 +702,7 @@
         </div>
 
         <div class="mt-10 flex flex-col gap-4 border-t border-line pt-6 sm:flex-row sm:items-center sm:justify-between">
-          <p class="text-sm text-muted">© 2025 in2capital Pty Ltd.</p>
+          <p class="text-sm text-muted">© 2026 in2capital Pty Ltd.</p>
           <div class="flex flex-wrap gap-x-4 gap-y-2 text-sm text-muted">
             <a href="#" class="hover:text-ink">Privacy Policy</a>
             <a href="#" class="hover:text-ink">Terms of Service</a>
