--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
               <div class="mt-2 flex flex-col gap-2 sm:flex-row">
                 <a href="#" class="btn btn-primary">Apply now</a>
-                <a href="/mortgage-loan" class="btn btn-outline">Learn more</a>
+                <a href="/mortgage-loan.html" class="btn btn-outline">Learn more</a>
               </div>
             </article>
 
